--- a/.babelrc
+++ b/.babelrc
@@ -13,10 +13,7 @@
   "plugins": [
     "transform-vue-jsx",
     [
-      "@babel/plugin-transform-runtime",
-      {
-        "corejs": 2
-      }
+      "@babel/plugin-transform-runtime"
     ],
     [
       "@babel/plugin-proposal-decorators",
