--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.1",
   "description": "Base APP Vue Webpack 2021",
   "license": "MIT",
-  "author": {"email": "srcarmi@gmail.com", "name": "DevZatokio (CAOL)"},
-  "keywords":[
+  "author": {
+    "email": "devzatokio@gmail.com",
+    "name": "DevZatokio (CAOL)"
+  },
+  "keywords": [
     "vue",
     "webpack",
     "node",
@@ -30,8 +33,6 @@
     "vue": "^2.6.12",
     "vue-analytics": "^5.22.1",
     "vue-axios": "^3.2.4",
-    "vue-cli-plugin-i18n": "^2.0.0",
-    "vue-i18n": "^8.23.0",
     "vue-router": "^3.5.1",
     "vue-toasted": "^1.1.28"
   },
@@ -48,8 +49,7 @@
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
-    "@babel/runtime-corejs2": "^7.13.9",
-    "@kazupon/vue-i18n-loader": "^0.5.0",
+    "@babel/runtime-corejs3": "^7.13.10",
     "babel-loader": "^8.2.2",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
@@ -57,15 +57,17 @@
     "connect-history-api-fallback": "^1.6.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.1.1",
+    "css-minimizer-webpack-plugin": "^1.2.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.17.1",
-    "friendly-errors-webpack-plugin": "^1.7.0",
+    "fail-on-errors-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^5.2.0",
     "http-proxy-middleware": "^1.0.6",
     "mini-css-extract-plugin": "^1.3.9",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "node-sass": "^5.0.0",
     "ora": "^5.3.0",
     "rimraf": "^3.0.2",
+    "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "semver": "^7.3.4",
     "shelljs": "^0.8.4",
@@ -73,7 +75,7 @@
     "vue-loader": "^15.9.6",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.24.2",
+    "webpack": "^5.24.4",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-dev-middleware": "^4.1.0",
     "webpack-hot-middleware": "^2.25.0",
@@ -82,6 +84,6 @@
   },
   "engines": {
     "node": ">= 8.0.0",
-    "npm": ">= 4.0.0"
+    "npm": ">= 6.0.0"
   }
 }
