--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.17.1",
     "fail-on-errors-webpack-plugin": "^3.0.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.2.0",
     "http-proxy-middleware": "^1.0.6",
     "mini-css-extract-plugin": "^1.3.9",
